--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 .App {
   text-align: center;
+  height: 100%;
+
 }
 
+main {
+  height: 100%;
+  height: calc(100% - 100px);
+
+}
 
 .App-link {
   color: #61dafb;
@@ -11,6 +18,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
